tests/baselines/reference/propertyWrappedInTry.errors.txt
==== tests/cases/compiler/propertyWrappedInTry.ts (8 errors) ====
    class Foo {
    
        try {
        ~~~
!!! error TS1008: Unexpected token; 'constructor, function, accessor or variable' expected.
    
            public bar = someInitThatMightFail();
            ~~~~~~
!!! error TS1008: Unexpected token; 'statement' expected.
                   ~~~
!!! error TS2095: Could not find symbol 'bar'.
                         ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2095: Could not find symbol 'someInitThatMightFail'.
    
        } catch(e) {}
    
    
    
        public baz() {
        ~~~~~~
!!! error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.
                     ~
!!! error TS1005: ';' expected.
               ~~~
!!! error TS2095: Could not find symbol 'baz'.
    
            return this.bar; // doesn't get rewritten to Foo.bar.
    
        }
    
    }
    ~
!!! error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.
    
    